# DataMesh

./: README.md  pyproject.toml
data/ap/: content.db
datamesh/: __init__.py  __main__.py
datamesh/api/: __init__.py  handlers.py  middleware.py  router.py
datamesh/core/: __init__.py  config.py  constants.py  errors.py  types.py
datamesh/demos/: __init__.py  state_mesh_demo.py
datamesh/history/: __init__.py  compactor.py  cursor.py  database.py  partitioner.py  snapshot.py  timeline.py
datamesh/memory/: __init__.py  database.py  hierarchy.py
datamesh/memory/ltm/: __init__.py  consolidation.py  episodic.py  graph_store.py  vector_store.py
datamesh/memory/stm/: __init__.py  context_window.py  eviction.py  working_set.py
datamesh/observability/: __init__.py  logging.py  metrics.py  tracing.py
datamesh/pipeline/: __init__.py  backpressure.py  deduplication.py  ingestion.py  saga.py
datamesh/reliability/: __init__.py  circuit_breaker.py  retry.py
datamesh/session/: __init__.py  affinity.py  cache.py  database.py  lease.py  registry.py  state_machine.py
datamesh/sharding/: __init__.py  consistent_hash.py  partitioner.py
datamesh/storage/: README.md  __init__.py  backends.py  config.py  protocols.py  redis_store.py  s3_store.py
datamesh/storage/ap/: __init__.py  engine.py  lsm_tree.py  repositories.py  schema.py
datamesh/storage/cp/: __init__.py  engine.py  repositories.py  schema.py
datamesh/storage/object_store/: __init__.py  backends.py  cas.py
datamesh/tests/: test_database_layers.py  test_storage_api.py
vector_search/: __init__.py  __main__.py  pyproject.toml
vector_search/core/: __init__.py  config.py  errors.py  protocols.py  sparse_types.py  types.py
vector_search/cpp/: CMakeLists.txt
vector_search/cpp/include/: common.hpp  hnsw.hpp  quantization.hpp  simd_ops.hpp
vector_search/cpp/src/: bindings.cpp  hnsw.cpp  quantization.cpp  simd_ops.cpp
vector_search/embeddings/: __init__.py  base.py  cohere.py  huggingface.py  langchain.py  openai.py  splade.py
vector_search/examples/: __init__.py  benchmark.py  datamesh_integration.py  datamesh_integration_arena_text.py  datamesh_integration_arena_text_new.py  retrieval_visualization.py  sota_retrieval_integration.py
vector_search/index/: __init__.py  distance.py  hnsw.py  hybrid_retriever.py  inverted_index.py
vector_search/tests/: __init__.py  test_distance.py  test_hnsw.py  test_sparse_retrieval.py  test_types.py
