[build-system]
requires = [
    "scikit-build-core>=0.8.0",
    "pybind11>=2.11.0",
    "cmake>=3.15",
]
build-backend = "scikit_build_core.build"

[project]
name = "vectorsearch"
version = "0.1.0"
description = "Planetary-Scale Distributed Vector Search & Inference System with C++ SIMD Core"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Planetary AI Systems", email = "engineering@planetary.ai" }
]
keywords = [
    "vector-search",
    "hnsw",
    "similarity-search",
    "embeddings",
    "machine-learning",
    "distributed-systems",
    "grpc",
    "simd",
    "avx2",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database :: Database Engines/Servers",
    "Typing :: Typed",
]

# ============================================================================
# CORE DEPENDENCIES (Minimal - Zero External Hard Dependencies)
# ============================================================================
dependencies = [
    "numpy>=1.24.0",           # SIMD-optimized array operations
]


# ============================================================================
# OPTIONAL DEPENDENCIES (Platform Integrations)
# ============================================================================
[project.optional-dependencies]
# Embedding Provider SDKs
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
cohere = ["cohere>=4.0.0"]
huggingface = [
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
]
langchain = ["langchain-core>=0.1.0"]

# All embedding providers
embeddings = [
    "vectorsearch[openai]",
    "vectorsearch[anthropic]",
    "vectorsearch[cohere]",
    "vectorsearch[huggingface]",
    "vectorsearch[langchain]",
]

# gRPC transport layer
grpc = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
]

# REST API gateway
rest = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
]

# Full API (gRPC + REST)
api = [
    "vectorsearch[grpc]",
    "vectorsearch[rest]",
]

# DataMesh integration (optional)
datamesh = [
    "datamesh>=0.1.0",
]

# Observability stack
observability = [
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-jaeger>=1.21.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "black>=24.1.0",
    "hypothesis>=6.92.0",
]

# HuggingFace datasets for streaming
datasets = [
    "datasets>=2.16.0",
]

# Full installation
all = [
    "vectorsearch[embeddings]",
    "vectorsearch[api]",
    "vectorsearch[observability]",
    "vectorsearch[datasets]",
    "vectorsearch[dev]",
]

[project.urls]
Homepage = "https://github.com/planetary-ai/vectorsearch"
Documentation = "https://vectorsearch.planetary.ai"
Repository = "https://github.com/planetary-ai/vectorsearch"
Changelog = "https://github.com/planetary-ai/vectorsearch/blob/main/CHANGELOG.md"

[project.scripts]
vectorsearch = "vector_search.__main__:main"

# ============================================================================
# SCIKIT-BUILD-CORE CONFIGURATION (C++ Extension)
# ============================================================================
[tool.scikit-build]
wheel.packages = ["vector_search"]
cmake.source-dir = "cpp"
cmake.build-type = "Release"
cmake.args = ["-DPYTHON_EXECUTABLE:FILEPATH=${python_executable}"]
wheel.install-dir = "vector_search"

# Fallback to pure Python if C++ build fails
[tool.scikit-build.cmake.define]
BUILD_TESTS = "OFF"

# ============================================================================
# TOOL CONFIGURATIONS
# ============================================================================

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["vector_search"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "torch.*",
    "transformers.*",
    "sentence_transformers.*",
    "grpc.*",
    "google.protobuf.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "benchmark: marks benchmark tests",
]

[tool.coverage.run]
source = ["vector_search"]
branch = true
omit = ["*/__pycache__/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
